Fixed spacing between folder icon and folder servers

--- a/css/GuildbarRevert.css
+++ b/css/GuildbarRevert.css
@@ -165,6 +165,10 @@ nav[class*="guilds_"] {
             }
         }
 
+        > [class*="listItem__"] {
+            margin-bottom: 0;
+        }
+
         margin-bottom: 8px;
     }
 
